Remove some problems in Exercise 4 and 5

--- a/ex04/exercise.tex
+++ b/ex04/exercise.tex
@@ -191,7 +191,10 @@
     exercise 1, problem 4.
 
   \end{solution}
-  
+
+% \item I implemented the experiment in Haykin section 3.11 in
+%   \texttt{ex04_03.m} but a) it might not be correct and b) I don't see
+%   the point of that experiment.
 
 
 \end{enumerate}
