--- a/ex05/exercise.tex
+++ b/ex05/exercise.tex
@@ -475,16 +475,20 @@
   \end{solution}
   
 
-\item (Ham \& Kostanic 3.8, Matlab demo) Write a computer program that uses the MLP
-  network trained by backpropagation to perform image compression. To
-  generate the input/target vectors $\vect{x}$, divide the image into
-  8-by-8 pixel blocks and arrange the elements of each block into a
-  64-dimensional vector. Experiment with different numbers of neurons
-  in the hidden layer.
+  % The following would be a great computer exercise perhaps! At least
+  % it makes much more sense and is much more related to neural
+  % networks than the double-moon classification problem with LMS.
+  
+% \item (Ham \& Kostanic 3.8, Matlab demo) Write a computer program that uses the MLP
+%   network trained by backpropagation to perform image compression. To
+%   generate the input/target vectors $\vect{x}$, divide the image into
+%   8-by-8 pixel blocks and arrange the elements of each block into a
+%   64-dimensional vector. Experiment with different numbers of neurons
+%   in the hidden layer.
 
-  \begin{solution}
+%   \begin{solution}
 
-  \end{solution}
+%   \end{solution}
   
 \end{enumerate}
 \end{document}             % End of document.
